--- a/dead.html
+++ b/dead.html
@@ -335,5 +335,9 @@ var mySecondTerm = new fauxTerm({
 });
 
 
-<div class="term" id="term"></div>
+<div class="term" id="term">
+      <span class="bell"></span>
+      Welcome to dam.pe!
+      guest@dam.pe:/$ 
+      </div>
 <div class="term" id="term2"></div>
