--- a/dead.html
+++ b/dead.html
@@ -2,14 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Faux Term - A fake javascript terminal emulator</title>
+  <title>Day of the Dead - NOT FOR YOU!</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <div class="term" id="term"></div>
-<div class="term" id="term2"></div>
+<!-- <div class="term" id="term2"></div> -->
 <!-- partial -->
   <script  src="./script.js"></script>
 
